=======
CHANGES
=======

3.5.1 (unreleased)
------------------

- Removed DEPENDENCIES.cfg

- Removed dependency on zope.container: IReadDirectory and IWriteDirectory
  inherit only from interfaces defined in zope.interface and
  zope.interface.common.mapping.

3.5.0 (2009-01-31)
------------------

- Changed use of zope.app.container to zope.container.

3.4.0 (2007-10-02)
------------------

- Initial Zope-independent release.